# back_end/src/application/routers/routes.ts
@@ -1,6 +1,7 @@
 import * as express from 'express';
 import UsersRouters from './users.routers.js';
 import PurchasePackageRouters from './purchase_package.routers.js';
+import FaucetRouters from './faucet.routers.js';
 
 export default class Routes {
     public router = express.Router();
@@ -8,6 +9,7 @@ export default class Routes {
     constructor() {
         this.router.use('/users', new UsersRouters().getRouters());
         this.router.use('/purchase_packages', new PurchasePackageRouters().getRouters());
+        this.router.use('/faucet', new FaucetRouters().getRouters());
     }
 
     public getRouters() {
